--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <body>
       <h1> my webpage </h1>
-    Hello there, awesome person! 
+<img src="https://avatars.githubusercontent.com/u/83155250?v=4">
+
   </body>
 
 </html>
